list of students

--- a/index.html
+++ b/index.html
@@ -655,91 +655,103 @@ postscript.  Most of these papers are viewable in several formats in
 
 <!-- Other: -->
 
-<ul>
-<li>
-<a href="http://www.cs.cmu.edu/~krivard/">Katie Rivard Mazaitis</a>, research programmer/analyst
-</ul>
+Current students:
+
+<p>
 
 <!-- Students: -->
 <ul>
-<li><a href="https://sites.google.com/site/rosecatherinek/home">Rose Catherine Kanjirathinkal</a>, LTI PhD student.
-<li><a href="http://kimiyoung.github.io/">Zhilin Yang</a>, LTI PhD student, co-advised with Ruslan Salakhutdinov.
 <li><a href="http://www.cs.cmu.edu/~bdhingra/">Bhuwan Dhingra</a>, LTI PhD student, co-advised with Ruslan Salakhutdinov.
-<li><a href="http://www.cs.cmu.edu/~fanyang1/">Fan Yang</a>, MLD PhD student, co-supervised with Tom Mitchell.
 <li>Daniel Spokoyny, LTI PhD student, co-supervised with Taylog Berg-Kirkpatrick.
-<p>
-<li>Haitian Sun, MLD MS student.
 </ul>
 
-Alumni:
+<p>
 
-<ul>
-<li><a href="http://www.cs.cmu.edu/~yifengt/">Yifeng Tao</a>, CMU Comp Bio PhD student, now supervised by Xinghua Lu.
-<li><a href="https://andy-jqa.github.io/">Qiao Jin</a>, School of Medicine, Tsinghua University,  
-now supervised by Xinghua Lu.
-<li><a href="http://www.cs.cmu.edu/~yww/">William Yang Wang</a> (former LTI PhD student, now at UCSB).
-<li><a href="http://www.cs.cmu.edu/afs/cs/Web/People/dmovshov/">Dana Movshovitz-Attias</a> (former CSD PhD student,
- now at Google).
-<li><a href="http://www.cs.cmu.edu/afs/cs/Web/People/bbd/">Bhavana Dalvi Mishra</a> (former LTI PhD student
-(co-advised with <a href="http://www.cs.cmu.edu/~callan/">Jamie Callan</a>, now at AI2)
-<li><a href="http://www.cs.cmu.edu/~taey/">Tae Yano</a>, (former LTI
-PhD student, co-advised
-with <a href="http://www.cs.cmu.edu/~nasmith/">Noah Smith</a>, now at Microsoft)
-<li><a href="http://www.cs.cmu.edu/~nli1">Nan Li</a>, (former CSD PhD
-student, co-advised
-with <a href="http://pact.cs.cmu.edu/koedinger.html">Ken
-Koedinger</a>, now at D. E. Shaw)
-<li><a href="http://www.cs.cmu.edu/~rbalasub/">Ramnath Balasubramanyan</a>, (LTI PhD student, now at Twitter)
-<li><a href="http://www.cs.cmu.edu/~maheshj/">Mahesh Joshi</a>, (former LTI PhD student,
-co-advised with <a href="http://www.cs.cmu.edu/~cprose/">Carolyn Ros&eacute;</a>, now at EBay)
-<li><a href="http://www.cs.cmu.edu/~frank/">Frank Lin</a>, (former LTI PhD student, now at AirBnB)
-<li><a href="http://www.cs.cmu.edu/~nlao/">Ni Lao</a> (former LTI PhD student, now at Google)
-<li><a href="http://www.cs.cmu.edu/~rcwang">Richard C. Wang</a>,
-(former LTI PhD student co-advised with <a
-href="http://www.cs.cmu.edu/~ref/">Bob Frederking</a>, now at Baidu).
-<li><a href="http://www.cs.cmu.edu/~aarnold/">Andrew Arnold</a>
-(former MLD PhD student, now at Point 72 Asset Management)
-<li><a href="http://www.cs.cmu.edu/~einat">Einat Minkov</a>
-(former LTI PhD student, now at Haifa University)
-<li><a href="http://www.cs.cmu.edu/~vitor">Vitor Rocha de Carvalho</a> (former LTI PhD student, now at QualComm)
-<li><a href="http://www.cs.cmu.edu/~woomy/">Zhenzhen Kou</a> (former MLD PhD student, now at Google)
+Former students/colleagues:
 
 <p>
 
-<li>Ezra Winston, MLD Master's student.
-<li>Lanxio (Karen) Xu, MLD Master's student.
-<li>Yuxing Zhang, MLD Master's student.
-<li>Jakob Bauer, MLD 5th-year Master's student
-.<li>Kavya Srinet, MCDS Master's student.
-<li>Bhawna Juneja, MCDS Master's student.
-<li>Tom Shen, CMU CSD undergrad
-<li>Yu-Hsin Allen Kuo</a>, LTI MLT student, formerly co-advised with <a href="http://www.cs.cmu.edu/~nmiskov/Natasas_website/Home.html">Natasa Miskov-Zivanov</a>
+<ul>
+<a href="http://www.cs.cmu.edu/~krivard/">Katie Rivard Mazaitis</a>, research programmer/analyst
+
+<p>
+
+<li><a href="http://kimiyoung.github.io/">Zhilin Yang</a>, former LTI PhD student, co-advised with Ruslan Salakhutdinov, now doing a startup.
+<li><a href="https://sites.google.com/site/rosecatherinek/home">Rose Catherine Kanjirathinkal</a>, former LTI PhD student, now at Yahoo.
+<li><a href="http://www.cs.cmu.edu/~yww/">William Yang Wang</a>, former LTI PhD student, now at UCSB.
+<li><a href="http://www.cs.cmu.edu/afs/cs/Web/People/dmovshov/">Dana Movshovitz-Attias</a> former CSD PhD student,
+ now at Google.
+<li><a href="http://www.cs.cmu.edu/afs/cs/Web/People/bbd/">Bhavana Dalvi Mishra</a>former LTI PhD student
+(co-advised with <a href="http://www.cs.cmu.edu/~callan/">Jamie Callan</a>, now at AI2.
+<li><a href="http://www.cs.cmu.edu/~taey/">Tae Yano</a>, former LTI
+PhD student, co-advised
+with <a href="http://www.cs.cmu.edu/~nasmith/">Noah Smith</a>.
+<li><a href="http://www.cs.cmu.edu/~nli1">Nan Li</a>, former CSD PhD
+student, co-advised
+with <a href="http://pact.cs.cmu.edu/koedinger.html">Ken
+Koedinger</a>, now at D. E. Shaw.
+<li><a href="http://www.cs.cmu.edu/~rbalasub/">Ramnath Balasubramanyan</a>, former LTI PhD student.
+<li><a href="http://www.cs.cmu.edu/~maheshj/">Mahesh Joshi</a>, former LTI PhD student,
+co-advised with <a href="http://www.cs.cmu.edu/~cprose/">Carolyn Ros&eacute;</a>
+<li><a href="http://www.cs.cmu.edu/~frank/">Frank Lin</a>, former LTI PhD student
+<li><a href="http://www.cs.cmu.edu/~nlao/">Ni Lao</a> former LTI PhD student
+<li><a href="http://www.cs.cmu.edu/~rcwang">Richard C. Wang</a>, former LTI PhD student co-advised with <a
+href="http://www.cs.cmu.edu/~ref/">Bob Frederking</a>.
+<li><a href="http://www.cs.cmu.edu/~aarnold/">Andrew Arnold</a> former MLD PhD student, now at Google.
+<li><a href="http://www.cs.cmu.edu/~einat">Einat Minkov</a> former LTI PhD student, now at Haifa University.
+<li><a href="http://www.cs.cmu.edu/~vitor">Vitor Rocha de Carvalho</a> former LTI PhD student, now at SnapChat.
+<li><a href="http://www.cs.cmu.edu/~woomy/">Zhenzhen Kou</a> former MLD PhD student, now at Google.
+
+<p>
+
+<li><a href="http://www.cs.cmu.edu/~yifengt/">Yifeng Tao</a>, CMU Comp Bio PhD student, now supervised by Russell Schwartz.
+<li><a href="http://www.cs.cmu.edu/~eairoldi">Edoardo Airoldi</a>
+former MLD/Stats PhD student, co-advised with <a href="http://www.stat.cmu.edu/~fienberg/">Steve Fienberg</a>, now at Harvard.
+<li><a href="http://www.cs.cmu.edu/~pradeepr">Pradeep Ravikumar</a>
+former MLD PhD student, co-advised with <a href="http://www.stat.cmu.edu/~fienberg/">Steve Fienberg</a>, now at CMU.
+
+<p>
+
+<li>Haitian Sun, former MLD MS student, now working in my group at Google.
+<li><a href="http://www.cs.cmu.edu/~fanyang1/">Fan Yang</a>, MLD MS student, now on the job market!
+<li><a href="https://andy-jqa.github.io/">Qiao Jin</a>, School of Medicine, Tsinghua University,  
+now supervised by Xinghua Lu.
+<li>Ezra Winston, former MLD Master's student, now a PhD student in MLD.
+<li>Lanxio (Karen) Xu, former MLD Master's student.
+<li>Yuxing Zhang, former MLD Master's student.
+<li>Jakob Bauer, former MLD 5th-year Master's student, now at Google.
+.<li>Kavya Srinet,  former MCDS Master's student.
+<li>Bhawna Juneja,  former MCDS Master's student.
+<li>Tom Shen,  former CMU CSD undergrad.
+<li>Yu-Hsin Allen Kuo</a>,  former LTI MLT student, formerly co-advised with <a href="http://www.cs.cmu.edu/~nmiskov/Natasas_website/Home.html">Natasa Miskov-Zivanov</a>
 <li>Rahul Goutam</a>, former LTI MLT student, co-advised with <a href="http://www.cs.cmu.edu/~nmiskov/Natasas_website/Home.html">Natasa Miskov-Zivanov</a>
 <li><a href="https://plus.google.com/102262489142071513958/posts">Malcolm Greaves</a>, former CSD master's student.
-<li><a href="http://www.cs.cmu.edu/~eairoldi">Edoardo Airoldi</a>
-(former MLD/Stats PhD student, co-advised with <a href="http://www.stat.cmu.edu/~fienberg/">Steve Fienberg</a>)
-<li><a href="http://www.csie.ncu.edu.tw/~chia/">Ja-Hui Chang</a>
-(visiting faculty from National Central University, Taiwan, 2007-2008)
-<li>Wen Haw Chong (PhD student at Singapore Management University,
-visted CMU in 2015-2016).
+<li>Wen Haw Chong, PhD student at Singapore Management University,
+visted CMU in 2015-2016.
 <li><a href="http://www2.sis.smu.edu.sg/students/phd/class10/10_hoang_tuananh.asp">Tuan
-Ahn Hoang</a>, (PhD student at Singapore Management University,
-visited CMU for 2012-2013 academic year in my group).
+Ahn Hoang</a>, PhD student at Singapore Management University,
+visited CMU for 2012-2013 academic year.
 <li><a href="http://freddychua.com/">Freddy
-Chong Tat Chua</a> (PhD student at Singapore Management University,
-visited CMU for the academic year 2011-2012 in my group.)
+Chong Tat Chua</a> PhD student at Singapore Management University,
+visited CMU for the academic year 2011-2012.
+
+<p>
+
+
 <li><a href="http://www.optimizelife.com/">Gustavo Lacerda</a>
-(former research assistant, co-supervised with Noboru Matsuda and Ken Koedinger, now at UBC)
+former research assistant, co-supervised with Noboru Matsuda and Ken Koedinger.
 <li><a href="http://www.cs.cmu.edu/~lbing/">Lidong Bing</a>, former
-postdoc, now at Tencent.
+postdoc.
 <li><a href="https://sites.google.com/site/rameshnallapati/">Ramesh Nallapati</a>
-(former postdoc, co-supervised with <a
-href="http://www.cs.cmu.edu/~lafferty/">John Lafferty</a>, now at IBM Watson)
+former postdoc, co-supervised with <a
+href="http://www.cs.cmu.edu/~lafferty/">John Lafferty</a>.
 <li><a href="http://www.cs.cmu.edu/~mazda">Noboru Matsuda</a>
-(former postdoc, co-supervised with <a href="http://pact.cs.cmu.edu/koedinger.html">Ken Koedinger</a>,
-now System Scientist in CMU's HCII)
-<li><a href="http://www.cs.cmu.edu/~pradeepr">Pradeep Ravikumar</a>
-(former MLD PhD student, co-advised with <a href="http://www.stat.cmu.edu/~fienberg/">Steve Fienberg</a>)
+former postdoc, co-supervised with <a href="http://pact.cs.cmu.edu/koedinger.html">Ken Koedinger</a>.
+
+<p>
+
+<li><a href="http://www.csie.ncu.edu.tw/~chia/">Ja-Hui Chang</a>
+visiting faculty from National Central University, Taiwan, 2007-2008.
 
 <!-- External members -->
 
@@ -782,13 +794,15 @@ href="http://www.cs.cmu.edu/~jelsas/">Jon Elsas</a> (CMU)
 <li>Derry Wijaya (CMU)
 <li>Lingjia Deng (Univ of Pittsburgh)
 <li>Chenyan Xiong (CMU)
+<li>Tiancheng Zhao (CMU)
+<li>Pradeep Dasigi (CMU)
 </ul>
 I have also been an external committee member for the Master's theses of 
 <a href="http://www.cs.cmu.edu/~mehrbod/">Mehrbod Sharifi</a> (CMU) and
 Weam Abu-Zaki (CMU).  
 <p>
-I am currently an external committee member for Tiancheng Zhao,
-Shashank Srivastava, Pradeep Dasigi, and Abulhair Saparov.
+I am currently an external committee member for Jay Yoon Lee,
+Shashank Srivastava, and Abulhair Saparov.
 
 <!-- Other: -->
 
