--- a/lineage.html
+++ b/lineage.html
@@ -52,8 +52,8 @@ So, I have two chains of "academic ancestors":
             <li>Simeon Poisson 
             <li>Joseph Lagrange
             <li>Leonhard Euler, Universitt Basel 1726
-            <li>Johann Bernoulli, 1694
-            <li>Jacob Bernoulli 
+            <li>Johann Bernoulli, Universitt Basel 1694
+            <li>Jacob Bernoulli, Universitt Basel 1684 
             <li>Gottfried Leibniz, Universitt Altdorf 1666
             <li>Erhard Weigel, Universitt Leipzig 1650
        </ul>       			
@@ -68,7 +68,7 @@ Mathematics Geneology Project</a>
     <address>William Cohen</address>
 <!-- Created: Sat Feb 12 13:37:11 EST 2005 -->
 <!-- hhmts start -->
-Last modified: Tue Jul 13 12:54:51 Eastern Daylight Time 2010
+Last modified: Tue 07 Jan 2020 04:59:54 PM EST
 <!-- hhmts end -->
   </body>
 </html>
